# mdk-examples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  examples-win32.sln  index.md
.github/workflows/: main.yml
Apple/: README.md
Apple/OCPlayer/: Podfile
Apple/OCPlayer/OCPlayer/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.mm  main.m
Apple/OCPlayer/OCPlayer.xcodeproj/: project.pbxproj
Apple/OCPlayer/OCPlayer.xcworkspace/: contents.xcworkspacedata
Apple/OCPlayer/OCPlayer/Base.lproj/: Main.storyboard
Apple/SwiftMdkExample/: README.md
Apple/SwiftMdkExample/Shared/: GameViewController.swift
Apple/SwiftMdkExample/SwiftMdkExample.xcodeproj/: project.pbxproj
Apple/SwiftMdkExample/iOS/: AppDelegate.swift
Apple/SwiftMdkExample/macOS/: AppDelegate.swift
Apple/SwiftMdkExample/macOS/Base.lproj/: Main.storyboard
Apple/SwiftMdkExample/tvOS/: AppDelegate.swift
Apple/SwiftPlayer/: Podfile
Apple/SwiftPlayer/SwiftPlayer/: AppDelegate.swift  SwiftPlayer.entitlements  ViewController.swift
Apple/SwiftPlayer/SwiftPlayer.xcodeproj/: project.pbxproj
Apple/SwiftPlayer/SwiftPlayer/Base.lproj/: Main.storyboard
Apple/SwiftUiPlayer/: SwiftUiPlayer.entitlements
Apple/SwiftUiPlayer/Shared/: ContentView.swift  MTLVideoView.swift  SwiftAppApp.swift  SwiftUIView.swift
Apple/SwiftUiPlayer/SwiftUIPlayer/: ContentView.swift  MTKVideoView.swift  NativeView.swift  SwiftUIPlayer.entitlements  SwiftUIPlayerApp.swift  VideoView.swift
Apple/SwiftUiPlayer/SwiftUiPlayer.xcodeproj/: project.pbxproj
Avalonia/: README.md
Avalonia/Example/: App.axaml  App.axaml.cs  Example.csproj  FontExtension.cs  MDKGL.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
GLFW/: CMakeLists.txt  PlayListAsOne.cpp  TexArray.cpp  glfwplay.cpp  glfwplay.vcxproj  glfwplay.vcxproj.filters  multiplayers.cpp  multiplayers.vcxproj  multiplayers.vcxproj.filters  multiwindows.cpp  multiwindows.vcxproj  multiwindows.vcxproj.filters  packages.config  prettylog.h  simple.cpp  simple.vcxproj  simple.vcxproj.filters
GLFW/dep/lib/: libglfw.tbd
Native/: CMakeLists.txt  DecodeFps.cpp  MediaInfoReader.cpp  README.md  Thumbnail.cpp  mdkplay.cpp  mdkplay.vcxproj  mdkplay.vcxproj.filters  offscreen.cpp  offscreen.vcxproj  offscreen.vcxproj.filters  packages.config  stream.cpp  x11play.cpp
Qt/: QMDKPlayer.cpp  QMDKPlayer.h  QMDKRenderer.cpp  QMDKRenderer.h  QMDKRhiRenderer.cpp  QMDKRhiRenderer.h  QMDKWidget.cpp  QMDKWidget.h  QMDKWidgetRenderer.cpp  QMDKWidgetRenderer.h  QMDKWindow.cpp  QMDKWindow.h  QMDKWindowRenderer.cpp  QMDKWindowRenderer.h  README.md  libqtmdk.pro  main.cpp  mdkplayer.h  projects.pro  qmdkplay.cpp  qmdkplay.pro  qmdkqmlplay.cpp  qmdkqmlplay.pro  qtmultiplayers.cpp  qtmultiplayers.pro  qtmultiwidgets.cpp  qtmultiwidgets.pro  qtpaintonvideo.cpp  qtpaintonvideo.pro  videogroup.cpp  videogroup.h
Qt/graphicsview/: GraphicsVideoItem.cpp  GraphicsVideoItem.h  graphicsview.pro  main.cpp
Qt/qml/: mdkplayer.cpp  mdkplayer.h  qmdkqmlplay.cpp  qmdkqmlplay.qml  qmdkqmlplay.qrc
Qt/qmlrhi/: README.md  VideoTextureItem.cpp  VideoTextureItem.h  VideoTextureNode.cpp  VideoTextureNode.h  VideoTextureNodePriv.cpp  VideoTextureNodePub.cpp  main.cpp  main.qml  qmlrhi.pro
Qt/qmlrhi0/: VideoTextureItem.cpp  main.qml  mdktextureitem.qrc  qmlrhi0.pro
Qt/rhiwidget/: CMakeLists.txt  RhiVideoWidget.cpp  RhiVideoWidget.h  main.cpp  rhiwidget.pro
Qt/rhiwindow/: CMakeLists.txt  RhiVideoWindow.cpp  RhiVideoWindow.h  main.cpp  rhiwindow.pro
Qt/vkwindow/: VkMDKWindow.cpp  VkMDKWindow.h  main.cpp  vkwindow.pro
SDL/: CMakeLists.txt  packages.config  sdlplay.cpp  sdlplay.vcxproj  sdlplay.vcxproj.filters
SDL3/: CMakeLists.txt  sdl3play.cpp
SFML/: packages.config  sfmlplay.cpp  sfmlplay.vcxproj  sfmlplay.vcxproj.filters  sfmltexture.cpp  window.cpp
WindowsStore/: MDK.sln
WindowsStore/CoreWindowCx/: App.cpp  App.h  CoreWindowMDK.vcxproj  CoreWindowMDK_TemporaryKey.pfx  Package.appxmanifest  packages.config
WindowsStore/XamlCx/: App.xaml  App.xaml.cpp  App.xaml.h  OpenGLES.cpp  OpenGLES.h  OpenGLESPage.xaml  OpenGLESPage.xaml.cpp  OpenGLESPage.xaml.h  Package.appxmanifest  XamlCx.sln  XamlMDK.vcxproj  XamlMDK_TemporaryKey.pfx  packages.config  pch.h
compose-multiplatform/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
compose-multiplatform/composeApp/: build.gradle.kts
compose-multiplatform/composeApp/nativeInterop/cinterop/: mdk.def
compose-multiplatform/composeApp/src/androidMain/: AndroidManifest.xml
compose-multiplatform/composeApp/src/androidMain/cpp/: CMakeLists.txt  MdkPlayerJNI.cpp
compose-multiplatform/composeApp/src/desktopMain/native/: CMakeLists.txt  mdk_shim.c
flutter/simple/: .gitignore  README.md  pubspec.yaml
flutter/simple/android/: build.gradle
flutter/simple/android/app/: build.gradle  build.gradle.kts
flutter/simple/ios/Runner/: Info.plist
flutter/simple/ios/Runner.xcodeproj/: project.pbxproj
flutter/simple/lib/: main.dart  multi_textures.dart
flutter/simple/linux/: CMakeLists.txt  my_application.cc
flutter/simple/linux/runner/: my_application.cc
flutter/simple/test/: widget_test.dart
flutter/simple/windows/: CMakeLists.txt
iOS/: AppDelegate.h  AppDelegate.mm  MDKPlayer-Info.plist  main.m
iOS/MDKPlayer/: MDKPlayer.entitlements
iOS/MDKPlayer.xcodeproj/: project.pbxproj
iOS/MDKPlayer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
macOS/: AppDelegate.mm  CMakeLists.txt  Info.plist.in  MainMenu.xib.in  main.mm
macOS/Player/: AppDelegate.mm  Info.plist
macOS/Player.xcodeproj/: project.pbxproj
ohos/: README.md  build-profile.json5  hvigor-config.json5  hvigorfile.ts  oh-package.json5
ohos/AppScope/: app.json5
ohos/entry/: build-profile.json5  hvigorfile.ts  oh-package.json5
ohos/entry/src/main/cpp/: CMakeLists.txt  player_napi.cpp
ohos/entry/src/main/cpp/types/libplayer_napi/: index.d.ts  oh-package.json5
unity/: README.md
unity/Assets/: VideoPlayerController.cs
unity/native/: CMakeLists.txt  MDKPlayer.cpp  MDKPlayer.h
window/: mdkplay.cpp
(+31 files in other folders)
